--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Todo list app</title>
+	<title>Todo list</title>
 	
 	<!-- Roboto -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
@@ -29,15 +29,10 @@
 	</header>
 
 	<div class="container">
-		<!-- Uncompleted -->
-		<ul class="todo" id="todo">
-			
-		</ul>
-
+		<!-- Not completed -->
+		<ul class="todo" id="todo"></ul>
 		<!-- Completed -->
-		<ul class="todo" id="completed">
-			
-		</ul>
+		<ul class="todo" id="completed"></ul>
 	</div>
 
 	
